# attention

./: #CMakeLists.txt#  .gitignore  CMakeCache.txt  CMakeLists.txt
attentionLib/: CMakeLists.txt
attentionLib/src/: predModels.cpp
src/: CMakeLists.txt
src/ColorSegmentation/: CMakeLists.txt
src/ColorSegmentation/src/: colorsegMain.cpp  colorsegModule.cpp  colorsegThread.cpp
src/RandomTopDownAttention/: CMakeLists.txt
src/RandomTopDownAttention/src/: attendingAudioState.cpp  attendingColourfulState.cpp  attendingFacesState.cpp  attendingIntensityState.cpp  attendingMovementState.cpp  attendingObjectState.cpp  helperFunctions.cpp  topDownAttentionModule.cpp  topDownAttentionPeriodic.cpp
src/action/: CMakeLists.txt
src/action/attentionPrioritiser/: CMakeLists.txt
src/action/eeProfiler/: CMakeLists.txt
src/action/gazeArbiter/: CMakeLists.txt
src/action/mosaic/: CMakeLists.txt
src/attentionManager/: CMakeLists.txt
src/attentionManager/src/: attentionManagerModule.cpp  attentionManagerThread.cpp  main.cpp
src/attentionPrioritiser/: CMakeLists.txt
src/attentionPrioritiser/src/: attPrioritiserModule.cpp  attPrioritiserThread.cpp  main.cpp  oculomotorController.cpp  prioCollectorThread.cpp  sacPlannerThread.cpp  trajectoryPredictor.cpp
src/audio/: CMakeLists.txt
src/audio/allocentricAudioPriorAdder/: CMakeLists.txt
src/audio/audioAttention/: main.cpp
src/audio/audioFrameExtractor/: CMakeLists.txt
src/audio/audioTemplate/: CMakeLists.txt
src/audio/cartesianVisualGenerator/: CMakeLists.txt~
src/audio/egocentricAudioCropper/: CMakeLists.txt  README.md
src/audio/headingAudio/: CMakeLists.txt  headingControl.cpp
src/audio/mexInterface/: CMakeLists.txt
src/audio/remoteInterface/: CMakeLists.txt  CMakeLists.txt~  remoteMic.cpp  remoteMic.cpp~
src/audioAttention/: main.cpp
src/audioInterface/src/: audioInterfaceModule.cpp  audioInterfaceRatethread.cpp  main.cpp
src/biologicalProcessing/: CMakeLists.txt
src/biologicalProcessing/opfExtractor/: CMakeLists.txt
src/colourSaliency/: CMakeLists.txt
src/colourSaliency/src/: colourSaliencyThread.cpp
src/deprecated/: #CMakeLists.txt#  CMakeLists.txt
src/deprecated/dictationcontroller/: main.cpp  main_bck_before_kids_visit.cpp
src/deprecated/earlyVisionInterface/: CMakeLists.txt
src/deprecated/eyeInterpreter/: CMakeLists.txt
src/deprecated/eyePathFinder/: main.cpp
src/deprecated/ikart/: CMakeLists.txt
src/deprecated/opOpticalFlow/: OpenCVImageAdapter.cpp  OvImageAdapter.h  main.cpp  opticalFlowThread.h
src/deprecated/salBlobFinderInterface/: CMakeLists.txt  salBlobFinderInterface.cpp  salBlobFinderInterface.h
src/deprecated/stereoAttentiveSelector/: CMakeLists.txt
src/deprecated/test/: CMakeLists.txt
src/deprecated/tutorial/: CMakeLists.txt
src/deprecated/vergence/: CMakeLists.txt
src/deprecated/zdfControl/: .gitignore  CMakeLists.txt  zdfControl.cpp  zdfControl.h
src/deprecated/zdfModule/: CMakeLists.txt
src/dictationcontroller/: CMakeLists.txt  main.cpp  main.cpp~
src/earlyMotion/: CMakeLists.txt
src/earlyMotion/src/: earlyMotionModule.cpp  earlyMotionThread.cpp  main.cpp
src/earlyVision/: CMakeLists.txt
src/earlyVision/src/: centerSurround.cpp  chrominanceThread.cpp  earlyVisionModule.cpp  earlyVisionThread.cpp  edgesThread.cpp  logPolar.cpp  main.cpp
src/earlyVisionInterface/src/: earlyVisionInterface.cpp
src/egocentricAudioCropper/: CMakeLists.txt  README.md
src/egocentricAudioCropper/src/: egocentricAudioCropperModule.cpp  egocentricAudioCropperThread.cpp  main.cpp
src/eyeInterpreter/src/: eyeInterpreterModule.cpp  eyeInterpreterThread.cpp  main.cpp
src/eyePathFinder/: CMakeLists.txt  main.cpp
src/faceDetector/: CMakeLists.txt  Detector.cpp  Detector.h  objectDetector.cpp
src/faceTracker/: CMakeLists.txt  Detector.cpp  Detector.cpp~  Detector.h  Detector.h~  objectDetector.cpp  objectDetector.cpp~
src/gazeArbiter/: CMakeLists.txt
src/gazeArbiter/src/: #gazeArbiterThread.cpp#  gazeArbiterModule.cpp  gazeArbiterThread.cpp  gazeCollectorThread.cpp  main.cpp
src/guis/: CMakeLists.txt
src/guis/selAttentionGui/: CMakeLists.txt
src/guis/selAttentionInterface/: #selAttentionInterface.h#  CMakeLists.txt  selAttentionInterface.cpp
src/handProfiler/: CMakeLists.txt
src/handProfiler/src/: FingerProfile.cpp  MotionProfile.cpp  handProfilerModule.cpp  handProfilerThread.cpp  handProfilerThread.cpp~  main.cpp
src/iCubGuiPopulator/: CMakeLists.txt
src/iCubGuiPopulator/src/: main.cpp  populatorThread.cpp
src/ikart/iKartFollower/: CMakeLists.txt
src/kalmanTest/: main.cpp
src/logOpticFlow/src/: logOFModule.cpp  logOFThread.cpp  opticFlowComputer.cpp  plotterThread.cpp
src/mosaic/: CMakeLists.txt
src/mosaic/src/: main.cpp  mosaicModule.cpp  mosaicThread.cpp
src/multiSensory/: CMakeLists.txt
src/multiSensory/attentionManager/: CMakeLists.txt  (+1 more)
src/opOpticalFlow/: CMakeLists.txt  OvImageT.h  opticalFlowModule.cpp  opticalFlowModule.h  opticalFlowThread.cpp  opticalFlowThread.h
src/predictorTest/: CMakeLists.txt  main.cpp  predModels.cpp  predModels.h
src/randomTopDownAttention/: CMakeLists.txt  README.md
src/repeater/: CMakeLists.txt
src/salBlobFinderInterface/: CMakeLists.txt  salBlobFinderInterface.cpp  salBlobFinderInterface.h
src/saliencyBlobFinder/: CMakeLists.txt
src/selAttentionInterface/: CMakeLists.txt  selAttentionInterface.cpp  selAttentionInterface.h
src/selectiveAttentionEngine/: CMakeLists.txt
src/skinProcessor/: CMakeLists.txt
src/stereoAttentiveSelector/: CMakeLists.txt
src/test/: CMakeLists.txt
src/topDownAttention/: CMakeLists.txt
src/tutorial/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt~
src/vergence/: CMakeLists.txt
src/vision/: CMakeLists.txt
src/visualFeatureExtractor/: CMakeLists.txt
src/visualFilter/: CMakeLists.txt
src/workingMemory/: CMakeLists.txt
src/yuvProcessor/: CMakeLists.txt
src/zdfControl/: CMakeLists.txt  zdfControl.cpp  zdfControl.h
src/zdfModule/: CMakeLists.txt
src/zeroDisparityFilter/: .gitignore  CMakeLists.txt  README.md  initYarpView.sh
(+931 files in other folders)
