# Copyright (C) 2020 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Omar Eldardeer
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

# subdirectories
add_subdirectory( audio                      )
add_subdirectory( vision                     )
add_subdirectory( multiSensory               )
add_subdirectory( action                     )
add_subdirectory( deprecated                 )
#add_subdirectory( tutorial                   )
add_subdirectory( guis                       )
