# Copyright: (C) 2014 RobotCub Consortium
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

add_subdirectory( audioAttention    )
add_subdirectory( audioInterface    )
add_subdirectory( audioTemplate     )
add_subdirectory( cartesianVisualGenerator)
add_subdirectory( headingAudio      )
add_subdirectory( remoteInterface   )


