# Copyright: (C) 2014 Robotics Brain and Cognitive Science
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

add_subdirectory( tutorialThread           )
add_subdirectory( tutorialRatethread       )
add_subdirectory( reaching                 )
add_subdirectory( imageSender	           )
add_subdirectory( cartesian-interface      )
add_subdirectory( simpleThriftServer       )
add_subdirectory( simpleThriftClient       )
